# secure-sign-service-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SBOM.md  SECURITY.md  audit-report.txt  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yml  nightly.yml  test.yml
config/: secure-sign.toml
docs/: api.md  architecture.md  configuration.md  deployment.md  docker-build-configuration.md  examples.md  feature-configuration.md  rustfmt-configuration.md  security.md  troubleshooting.md
docs/plans/: 2026-03-01-kms-attested-auto-unlock.md
monitoring/: alert_rules.yml  prometheus.yml
scripts/: auto-unlock-kms-recipient.sh  create-kms-ciphertext-blob.sh  ensure-decrypt.sh  health-check.sh  security-audit.sh  setup-environment.sh  test-docker-build.sh  unlock-signer-interactive.sh  verify-features.sh  verify-formatting.sh
scripts/nitro/: Dockerfile  build.sh  run.sh
scripts/sgx/: run.sh
secure-sign/: Cargo.toml  build.rs  secure-sign.cdx.json
secure-sign-core/: Cargo.toml  build.rs  secure-sign-core.cdx.json
secure-sign-core/proto/: neo_signpb.proto  signpb.proto
secure-sign-core/src/: aes.rs  base58.rs  base64.rs  bin.rs  bytes.rs  ecdsa.rs  h160.rs  h256.rs  hash.rs  hmac.rs  lib.rs  merkle.rs  random.rs  scrypt.rs  secp256r1.rs
secure-sign-core/src/neo/: check_sign.rs  mod.rs  nep2.rs  nep6.rs  sign.rs  signpb.rs
secure-sign-nitro/: Cargo.toml  secure-sign-nitro.cdx.json
secure-sign-nitro/src/: lib.rs
secure-sign-rpc/: Cargo.toml  build.rs  secure-sign-rpc.cdx.json
secure-sign-rpc/proto/: neo_sign_service.proto  servicepb.proto  startpb.proto
secure-sign-rpc/src/: lib.rs  servicepb.rs  startpb.rs  startup.rs  unencrypted.rs  vsock.rs
secure-sign-sgx/: Cargo.toml  Makefile  build.rs  build.sh
secure-sign-sgx-enclave/: Cargo.toml  Enclave.config.production.xml  Enclave.config.xml  Makefile  build.sh  caller.py  enclave.edl
secure-sign-sgx-enclave/src/: lib.rs  startup.rs
secure-sign-sgx/src/: enclave.rs  ffi.rs  main.rs  service.rs  sign.rs  startup.rs
secure-sign/config/: nep6_wallet.json
secure-sign/src/: main.rs  mock.rs  run.rs  startup.rs  tools.rs
