[package]
name = "secure-sign-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.15" }

base58 = { version = "0.2", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
hex    = { version = "0.4", default-features = false, features = ["alloc"] }

thiserror = { version = "2", default-features = false }
subtle    = { version = "2", default-features = false }
zeroize   = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }

aes  = { version = "0.8", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "ecdh"]}
getrandom = { version = "0.3", default-features = false }

scrypt = { version = "0.2", default-features = false }
ripemd = { version = "0.1", default-features = false }
sha2   = { version = "0.10", default-features = false }
hmac   = { version = "0.12", default-features = false }

bytes      = { version = "1", default-features = false }
serde      = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

prost       = { version = "0.13", default-features = false, features = ["prost-derive"] }
prost-types = { version = "0.13", default-features = false }

[build-dependencies]
prost-build = { version = "0.13" }

[features]
default = ["sha2/force-soft"]
std     = ["thiserror/std", "bytes/std", "prost/default", "prost-types/std", "sha2/default"]
