[package]
name = "secure-sign-nitro"
version = "0.1.0"
edition = "2021"
description = "AWS Nitro Enclaves support for secure blockchain signing"
homepage = "https://github.com/r3e-network/secure-sign-service-rs"
repository = "https://github.com/r3e-network/secure-sign-service-rs"
license = "MIT"
authors = ["R3E Network Team"]
rust-version = "1.70"
categories = ["cryptography", "hardware-support", "blockchain"]
keywords = ["aws", "nitro", "enclave", "tee", "signing"]
readme = "../README.md"

[dependencies]
secure-sign-core = { path = "../secure-sign-core", features = ["std"] }

aws-nitro-enclaves-nsm-api = { version = "0.4" }

thiserror = { version = "2" }
zeroize   = { version = "1", features = ["zeroize_derive"] }

[features]
