[package]
name = "secure-sign-nitro"
version = "0.1.0"
edition = "2021"

[dependencies]
secure-sign-core = { path = "../secure-sign-core", features = ["std"] }

aws-nitro-enclaves-nsm-api = { version = "0.4" }

thiserror = { version = "2" }
zeroize   = { version = "1", features = ["zeroize_derive"] }
rand_core = { version = "0.6", features = ["std"] }

[features]
