[package]
name = "secure-sign"
version = "0.1.0"
edition = "2021"
description = "A security-first NEO blockchain signing service CLI for Trusted Execution Environments"
homepage = "https://github.com/r3e-network/secure-sign-service-rs"
repository = "https://github.com/r3e-network/secure-sign-service-rs"
license = "MIT"
authors = ["R3E Network Team"]
rust-version = "1.70"
categories = ["cryptography", "command-line-utilities", "blockchain"]
keywords = ["neo", "blockchain", "signing", "cli", "tee"]
readme = "../README.md"

[dependencies]
secure-sign-core = { path = "../secure-sign-core", features = ["std"] }
secure-sign-rpc  = { path = "../secure-sign-rpc" }

tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12" }

hex        = { version = "0.4" }
serde_json = { version = "1" }

log        = { version = "0.4" }
env_logger = { version = "0.11" }
clap       = { version = "4.5", features = ["derive"] }

zeroize   = { version = "1", features = ["zeroize_derive"] }
rpassword = { version = "7.3" }

aes-gcm = { version = "0.10" }
p256    = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa", "ecdh"]}

# sgx_types = { rev = "v1.1.6", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
tcp   = []
vsock = []
# sgx   = ["sgx_types"]
